--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html, body {
   color: white;
   font-family: 'PT Serif', serif;
   margin: 0px;
-  width:1366px;
+  width:100%;
   padding: 0px;
   justify-content: center;
   align-items: center;
@@ -14,7 +14,7 @@ html, body {
 .wrap{
     overflow: hidden;
     margin: 0;
-    width:1366px;
+    width:100%;
     height:5162px;
     position: relative;
 }
@@ -605,10 +605,11 @@ html, body {
     top: 130px;
     left: 589px;
     width: 188px;
+    text-align: center;
     height: 74px;
     z-index: 1;
     color: var(--unnamed-color-ffffff);
-    text-align: left;
+   
     font: normal normal bold 56px/74px Roboto;
     letter-spacing: 0px;
     color: #FFFFFF;
@@ -677,6 +678,7 @@ html, body {
     left: 238px;
     white-space: nowrap;
     width: 302px;
+    margin: auto;
     z-index: 2;
     height: 216px;
     background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
@@ -804,6 +806,7 @@ html, body {
     top: 419px;
     left: 548px;
     width: 302px;
+    margin: auto;
     height: 82px;
     background: #001762 0% 0% no-repeat padding-box;
     opacity: 1;
@@ -974,6 +977,7 @@ html, body {
     left: 858px;
     width: 302px;
     height: 216px;
+    margin: auto;
     background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
     border: 1px solid var(--unnamed-color-707070);
     background: #FFFFFF 0% 0% no-repeat padding-box;
@@ -2598,7 +2602,6 @@ html, body {
 .service-price1{
     width:220px;
     left:20px;
-    right:20px;
 }
 .service-price1 p1{
     left:20px;
@@ -3421,6 +3424,31 @@ html, body {
        left:60px;
        text-align: center;
        font-size: 13px;
-    }
-       
+    }      
+}
+
+
+@media screen and (min-width:1367px){
+
+/* 
+html, body {
+    color: white;
+    font-family: 'PT Serif', serif;
+    margin: 0px;
+    width:100%;
+    padding: 0px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .wrap{
+      overflow: hidden;
+      margin: 0;
+      width:100%;
+      height:5162px;
+      position: relative;
+  } */
+
+
+
 }
