--- a/css/style.css
+++ b/css/style.css
@@ -332,14 +332,13 @@ html, body {
 
 .header-right h1{
     top: 490px;
-    left: 1128px;
+    left: 70%;
     z-index: 1;
     text-align: center;
     position: relative;
     width: 148px;
     height: 32px;
     color: var(--unnamed-color-ffffff);
-    text-align: left;
     font: normal normal normal 24px/32px Roboto;
     letter-spacing: 0px;
     color: #FFFFFF;
@@ -348,7 +347,7 @@ html, body {
 .header-right h2{
     top: 482px;
     font-size: 88px;
-    left: 680px;
+    left: 37%;
     width: 603px;
     height: 116px;
     color: var(--unnamed-color-ffffff);
@@ -362,7 +361,7 @@ html, body {
 
 .header-top button {
     top: 655px;
-    left: 998px;
+    left: 60%;
     width: 275px;
     position: absolute;
     height: 63px;
@@ -437,7 +436,7 @@ html, body {
 .about-me-title p{
     white-space: nowrap;
     top: 130.62px;
-    left: 562px;
+    left: 40%;
     width: 242px;
     height: 74px;
     color: var(--unnamed-color-151515);
@@ -450,7 +449,7 @@ html, body {
 }
 .about-me-under-bar{
     top: 974px;
-    left: 563px;
+    left: 40%;
     width: 242px;
     height: 0px;
     border: 3px solid #2150BC;
@@ -461,7 +460,7 @@ html, body {
 
 .profile_image img{
     top: 1020px;
-    left: 208px;
+    left: 10%;
     width: 323px;
     height: 287px;
     opacity: 1;
@@ -475,7 +474,7 @@ html, body {
 
 .introduction_text{
     top: 176px;
-    left: 637px;
+    left: 43%;
     width: 562px;
     height: 256px;
     color: var(--unnamed-color-151515);
@@ -489,7 +488,7 @@ html, body {
 
 .profile_background p{ 
     top: 1355px;
-    left: 637px;
+    left: 43%;
     width: 173px;
     height: 43px;
     color: var(--unnamed-color-151515);
@@ -503,7 +502,7 @@ html, body {
 
 .profile_background_content {
     top: 1430px;
-    left: 637px;
+    left: 43%;
     width: 224px;
     height: 46px;
     color: var(--unnamed-color-151515);
@@ -518,7 +517,7 @@ html, body {
 
 .profile_background p{
     top: 1355px;
-    left: 637px;
+    left: 43%;
     width: 173px;
     height: 43px;
     color: var(--unnamed-color-151515);
@@ -531,7 +530,7 @@ html, body {
 }
 .profile_background p2{
     top: 1355px;
-    left: 818px;
+    left: 648px;
     width: 26px;
     height: 43px;
     text-align: left;
@@ -547,7 +546,9 @@ html, body {
 /*service part*/
 .service_section{
     top: 1719px;
-    left: 0px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     width:100%;
     height: 1200px;
     background: url(../img/janko-ferlic-y0fjfgD2bLg-unsplash.jpg)  #001762 0% 0% no-repeat padding-box;
@@ -601,9 +602,10 @@ html, body {
 
 
 
+
 .service-title p{
     top: 130px;
-    left: 589px;
+    left: 43%;
     width: 188px;
     text-align: center;
     height: 74px;
@@ -619,7 +621,7 @@ html, body {
 
 .Service-under-bar{
     top: 208px;
-    left: 590px;
+    left: 43%;
     width: 188px;
     height: 0px;
     border: 3px solid #6996FF;
@@ -632,7 +634,7 @@ html, body {
 
 .service-subtitle{
     top: 277px;
-    left: 347px;
+    left: 26%;
     width: 672px;
     height: 69px;
     color: var(--unnamed-color-ffffff);
@@ -691,7 +693,7 @@ html, body {
 
 .service-price1 p1{
     top: 32px;
-    left: 79px;
+    left: 18px;
     z-index: 2;
     width: 184px;
     height: 21px;
@@ -1098,9 +1100,10 @@ html, body {
 }
 
 
+
 .contact-form-in-service button{
     top: 1088px;
-    left: 545px;
+    left: 40%;
     width: 276px;
     height: 63px;
     border: 1px solid var(--unnamed-color-ffffff);
@@ -1167,7 +1170,7 @@ html, body {
 
 .skill_section_title h1{
     top: 3042px;
-    left: 613px;
+    left: 43%;
     width: 139px;
     height: 74px;
     color: var(--unnamed-color-151515);
@@ -1181,7 +1184,7 @@ html, body {
 
 .Skill-under-bar{
     top: 3117px;
-    left: 614px;
+    left: 43%;
     width: 139px;
     height: 0px;
     border: 3px solid #2150BC;
@@ -1490,19 +1493,21 @@ html, body {
 
 
 
-
-
-
 .work_section{
     top:933px;
  }
  
  
  /*work part*/
+.work-list{
+    width:70%;
+}
+
+
  
  .work_section_title h1{
      top: 3845px;
-     left: 603px;
+     left: 43%;
      width: 159px;
      height: 74px;
      color: var(--unnamed-color-151515);
@@ -1516,7 +1521,7 @@ html, body {
  
  .Work-under-bar{
      top: 3920px;
-     left: 604px;
+     left: 43%;
      width: 159px;
      height: 0px;
      border: 3px solid #2150BC;
@@ -1781,7 +1786,7 @@ html, body {
  .footer-contact-form button{
      top:220px;
      color: #FFFFFF;
-     left: 545px;
+     left: 40%;
      width: 276px;
      height: 63px;
      border: 1px solid var(--unnamed-color-ffffff);
@@ -1802,7 +1807,7 @@ html, body {
  
  .SNS-icon p1 {
      top: 72px;
-     left: 596px;
+     left: 43%;
      width: 42px;
      height: 48px;
      color: var(--unnamed-color-ffffff);
@@ -1816,7 +1821,7 @@ html, body {
  
  .SNS-icon p2 {
      top: 72px;
-     left: 662px;
+     left: 50%;
      width: 42px;
      height: 48px;
      color: var(--unnamed-color-ffffff);
@@ -1831,7 +1836,7 @@ html, body {
  
  .SNS-icon p3 {
      top: 72px;
-     left: 728px;
+     left: 57%;
      width: 42px;
      height: 48px;
      color: var(--unnamed-color-ffffff);
@@ -1854,7 +1859,7 @@ html, body {
  
  .copy-right-text{
      top: 152px;
-     left: 526px;
+     left: 40%;
      white-space: nowrap;
      width: 314px;
      height: 21px;
@@ -2443,7 +2448,7 @@ html, body {
     color: white;
     font-family: 'PT Serif', serif;
     margin: 0px;
-    width:768px;
+    width:100%;
     padding: 0px;
     justify-content: center;
     align-items: center;
@@ -2452,7 +2457,7 @@ html, body {
 .wrap{
     overflow: hidden;
     margin: 0;
-    width:768px;
+    width:100%;
     position: relative;
     height:6585px;
 }
@@ -2460,7 +2465,7 @@ html, body {
         
 /*ヘッダー部分*/
 .header-top{
-    width:120%;
+    width:100%;
 }
 .wrap{
     overflow: hidden;
